# web-selenium-python-robotframework-1

./: .gitignore  .robocop  LICENSE  pyproject.toml  readme.md  requerimientos.txt  run.cmd  run_all.cmd  run_lin_sh.sh  run_win_ps.ps1
config/: Libraries.resource
data/: account.csv  data.csv  test_data.csv
data/actions/: create_test_results.py  (+1 more)
docs/: estimation.csv
keywords/: account_overview_keywords.resource  bill_payment_keywords.resource  common_keywords.resource  create_new_account_keywords.resource  find_transaction_keywords.resource  login_keywords.resource  overview_keywords.resource  request_loan_keywords.resource  transfer_funds_keywords.resource  transfer_keywords.resource
libraries/: DataTableLibrary.py  ExecutionStepReporter.py  FileDataReader.py  HighLightLibrary.py  HtmlTestReportListener1.py  HtmlTestStepLogReport.py  HtmlTestStepSliderReport.py  HtmlTestStepsReport1.py  HtmlTestStepsReport2.py  HtmlTestStepsReport3.py  PdfTestStepLogReport.py  PdfTestStepSliderReport.py  TestsExecutionResults.py  datatable.py  datatable_errors.py  datatable_repository.py  file_readers.py  file_results_writers.py  test_data.csv  test_data2.csv  test_datatable.py
loader/: entry_points.resource  import_components.resource  libraries.resource  util.resource
pages/: account_overview_page.resource  bill_payment_page.resource  create_new_account_page.resource  find_transaction_page.resource  login_page.resource  request_loan_page.resource  transfer_funds_page.resource
resources/: cuentas.resource  login.resource  util.resource
robot/: Suite.robot  main.robot
tests/: account.robot  bill_payment.robot  e2e.robot  e2e_tests.robot  find_transaction.robot  open_new_account_tests.robot  overview.robot  request_loan.robot  transfer.robot  workflows.robot
workflows/: bill_payment_workflows.resource  find_transaction_workflows.resource  open_account_and_get_overview_workflow.resource  open_account_and_transfer_fund_workflow.resource  overview_workflows.resource  request_loan_workflows.resource  transfer_workflows.resource
(+191 files in other folders)
