[tool.poetry]
name = "robotframework-web-example"
version = "1.0.0"
description = "Proyecto de scripts automatizados con Robot Framework y SeleniumLibrary"
authors = ["Angel Gerardo Molina Valdez <angelgerardomolinavaldez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.2.0"
pyyaml = "^6.0.1"
robotframework-robocop = "^5.0.3"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
